# VisionCop

./: .gitignore  README.md  pyproject.toml  requirements-face-recognition.txt  requirements.txt
tests/: test_utils.py
visioncop/: __init__.py  __main__.py  cli.py  core.py  utils.py
visioncop/web/: __init__.py  app.py
visioncop/web/static/: app.js  react-app.jsx  styles.css
visioncop/web/templates/: index.html
