[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visioncop"
version = "0.1.0"
description = "Find occurrences of a reference face in images and videos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "face-recognition>=1.3.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "Flask>=3.0.0",
]

[project.scripts]
visioncop = "visioncop.cli:main"
visioncop-web = "visioncop.web.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.package-data]
"visioncop.web" = ["templates/*.html", "static/*.css", "static/*.js"]
